[gd_scene load_steps=45 format=2]

[ext_resource path="res://Enemy/rat/Rat_low.gd" type="Script" id=1]
[ext_resource path="res://Enemy/rat/sprite/die-1.png" type="Texture" id=2]
[ext_resource path="res://Enemy/rat/sprite/die-2.png" type="Texture" id=3]
[ext_resource path="res://Enemy/rat/sprite/die-3.png" type="Texture" id=4]
[ext_resource path="res://Enemy/rat/sprite/die-4.png" type="Texture" id=5]
[ext_resource path="res://Enemy/rat/sprite/die-5.png" type="Texture" id=6]
[ext_resource path="res://Enemy/rat/sprite/die-6.png" type="Texture" id=7]
[ext_resource path="res://Enemy/rat/sprite/die-7.png" type="Texture" id=8]
[ext_resource path="res://Enemy/rat/sprite/die-8.png" type="Texture" id=9]
[ext_resource path="res://Enemy/rat/sprite/idle-1.png" type="Texture" id=10]
[ext_resource path="res://Enemy/rat/sprite/idle-2.png" type="Texture" id=11]
[ext_resource path="res://Enemy/rat/sprite/idle-3.png" type="Texture" id=12]
[ext_resource path="res://Enemy/rat/sprite/idle-4.png" type="Texture" id=13]
[ext_resource path="res://Enemy/rat/sprite/idle-5.png" type="Texture" id=14]
[ext_resource path="res://Enemy/rat/sprite/idle-6.png" type="Texture" id=15]
[ext_resource path="res://Enemy/rat/sprite/idle-7.png" type="Texture" id=16]
[ext_resource path="res://Enemy/rat/sprite/idle-8.png" type="Texture" id=17]
[ext_resource path="res://Enemy/rat/sprite/idle-9.png" type="Texture" id=18]
[ext_resource path="res://Enemy/rat/sprite/jump-1.png" type="Texture" id=19]
[ext_resource path="res://Enemy/rat/sprite/jump-2.png" type="Texture" id=20]
[ext_resource path="res://Enemy/rat/sprite/jump-3.png" type="Texture" id=21]
[ext_resource path="res://Enemy/rat/sprite/jump-4.png" type="Texture" id=22]
[ext_resource path="res://Enemy/rat/sprite/jump-5.png" type="Texture" id=23]
[ext_resource path="res://Enemy/rat/sprite/ouch-1.png" type="Texture" id=24]
[ext_resource path="res://Enemy/rat/sprite/ouch-2.png" type="Texture" id=25]
[ext_resource path="res://Enemy/rat/sprite/ouch-3.png" type="Texture" id=26]
[ext_resource path="res://Enemy/rat/sprite/attack-1.png" type="Texture" id=27]
[ext_resource path="res://Enemy/rat/sprite/attack-2.png" type="Texture" id=28]
[ext_resource path="res://Enemy/rat/sprite/attack-3.png" type="Texture" id=29]
[ext_resource path="res://Enemy/rat/sprite/attack-4.png" type="Texture" id=30]
[ext_resource path="res://Enemy/rat/sprite/attack-5.png" type="Texture" id=31]
[ext_resource path="res://Enemy/rat/sprite/attack-6.png" type="Texture" id=32]
[ext_resource path="res://Enemy/rat/sprite/move-1.png" type="Texture" id=33]
[ext_resource path="res://Enemy/rat/sprite/move-2.png" type="Texture" id=34]
[ext_resource path="res://Enemy/rat/sprite/move-3.png" type="Texture" id=35]
[ext_resource path="res://Enemy/rat/sprite/move-4.png" type="Texture" id=36]
[ext_resource path="res://Enemy/rat/sprite/move-5.png" type="Texture" id=37]
[ext_resource path="res://Enemy/boss/level1/boss1_1/new_styleboxflat.tres" type="StyleBox" id=38]
[ext_resource path="res://Enemy/boss/level1/boss1_1/bge.tres" type="StyleBox" id=39]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "смерть",
"speed": 7.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "стойка",
"speed": 7.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "прыжок",
"speed": 7.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "урон",
"speed": 7.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "атака",
"speed": 7.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "хотьба",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 8.48525 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 14, 5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 14, 5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 101.805, 10 )

[node name="Rat_low" type="KinematicBody2D" groups=[
"save",
"paused",
]]
pause_mode = 1
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="spr" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "хотьба"
playing = true

[node name="idletimer" type="Timer" parent="spr"]
wait_time = 3.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.513351, 5.13344 )
shape = SubResource( 7 )

[node name="attack_area" type="Area2D" parent="."]
position = Vector2( -10, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
shape = SubResource( 8 )

[node name="damage" type="Area2D" parent="."]
position = Vector2( -12, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage"]
shape = SubResource( 9 )

[node name="visible" type="Area2D" parent="."]
scale = Vector2( 1.2, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="visible"]
position = Vector2( 1.54002, 3.5934 )
shape = SubResource( 10 )

[node name="healthbar" type="ProgressBar" parent="."]
margin_left = -16.0
margin_top = -12.0
margin_right = 34.0
margin_bottom = 2.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/fg = ExtResource( 38 )
custom_styles/bg = ExtResource( 39 )
value = 100.0
percent_visible = false

[node name="check_place" type="RayCast2D" parent="."]
position = Vector2( -18, 5 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="damage_sound" type="AudioStreamPlayer2D" parent="."]

[node name="attack_sound" type="AudioStreamPlayer2D" parent="."]

[node name="move_sound" type="AudioStreamPlayer2D" parent="."]
max_distance = 300.0

[node name="music" type="AudioStreamPlayer2D" parent="."]

[node name="ouch_timer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="spr" to="." method="_on_spr_animation_finished"]
[connection signal="frame_changed" from="spr" to="." method="_on_spr_frame_changed"]
[connection signal="timeout" from="spr/idletimer" to="." method="_on_idletimer_timeout"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="damage" to="." method="_on_damage_body_entered"]
[connection signal="body_entered" from="visible" to="." method="_on_visible_body_entered"]
[connection signal="body_exited" from="visible" to="." method="_on_visible_body_exited"]
[connection signal="finished" from="damage_sound" to="." method="_on_damage_sound_finished"]
[connection signal="timeout" from="ouch_timer" to="." method="_on_ouch_timer_timeout"]
